# GTray-code

./: .gitignore  GTray.py  GTray.spec  README.md  cgen.py  code_widget.py  graphs_widget.py  handler.py  pyproject.toml  requirements.txt
assets/: config.ini  k.cfg  shortcut_generic.cfg  shortcut_graphs.cfg  shortcut_melhore.cfg
cmd/: run.bat  run.vbs
pessoal/: Decorador.py  Engineer.py  Escriba.py  IA.py  config_manager.py
services/: klisten.py
teste/: main.py
