[tool.poetry]
name = "systray"
version = "0.1.0"
description = ""
authors = ["Rox87 <rodrigohbx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynput = "^1.7.7"
pyperclip = "^1.9.0"
pywin32 = "^308"
pystray = "^0.19.5"
keyboard = "^0.13.5"
openai = "^1.51.2"
PyQt5 = "5.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
